terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "cherry_sg" {
  name        = "cherry-learning-sg"
  description = "Allow SSH, HTTP, Jenkins, Prometheus, and Grafana"

  ingress {
    description = "SSH access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP access for application"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins access"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SonarQube access"
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Prometheus access"
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Grafana access"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "cherry_learning_server" {
  ami                    = "ami-0e86e20dae9224db8"
  instance_type          = "t3.medium"
  vpc_security_group_ids = [aws_security_group.cherry_sg.id]

  tags = {
    Name = "Cherry-Learning-System-Server"
  }
}

output "ec2_public_ip" {
  value = aws_instance.cherry_learning_server.public_ip
}
